Ensure that syntax highlighting for code comments in examples passes WCAG color contrast

--- a/examples/css/github.css
+++ b/examples/css/github.css
@@ -14,7 +14,8 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 .hljs-comment,
 .hljs-quote {
-  color: #998;
+  /* Original value #998 didn’t pass WCAG AA */
+  color: #717277;
   font-style: italic;
 }
 
